--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -143,6 +143,25 @@ header h1 {
   margin-left: 48%;
 }
 
+.note-item__detail {
+  min-height: 180px;
+  margin: 20px 20px 20px 0px;
+  border: 1px solid black;
+  border-radius: 8px;
+  box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px 0px 0px inset;
+}
+
+.note-item__detail .note-item__title{
+  font-size: 20px;
+  color: white;
+  padding: 10px 10px;
+}
+
+.note-item__detail .note-item__description{
+  font-size: 14px;
+  padding: 10px 10px;
+}
+
 .note-item__archieve,
 .note-item__delete {
   background-color: transparent;
